# SavikRCEngine

./: CMakeLists.txt  README.md
src/: main.cpp
src/engine/: character.cpp  character.h  engine.cpp  engine.h  rc_render.cpp  rc_render.h
src/engine/components/: object.cpp  object.h
src/engine/interfaces/: IScene.h
src/engine/math/: line.h  point.h  se_math.cpp  se_math.h  vector.h
src/testGame/: TestScene.cpp  TestScene.h
